# hexadie

./: .gitignore  Cargo.toml  readme.md
assets/: config.ron
assets/boardgamepack/dice/: red.ron
assets/hexes/: hexes.ron
src/: assets.rs  config.rs  entities.rs  main.rs  states.rs
src/loading_screen/: mod.rs  state.rs
src/main_menu/: mod.rs  state.rs
src/map_selection/: mod.rs
src/settings_screen/: mod.rs
